@@ -59,7 +59,7 @@ def asm_hook(self, node):
 
 class asmprogram(link_task):
 	"Link object files into a c program"
-	run_str = '${ASLINK} ${AS_TGT_F}${TGT} ${SRC}'
+	run_str = '${ASLINK} ${ASLINKFLAGS} ${ASLNK_TGT_F}${TGT} ${ASLNK_SRC_F}${SRC}'
 	ext_out = ['.bin']
 	inst_to = '${BINDIR}'
 	chmod   = Utils.O755
