@@ -1,8 +1,10 @@
 NEW IN WAF 1.6.9
 ----------------
 * Fixed the duplicate moc file creation in slow_qt4 #1047
+* Fixed the Visual Studio 2008 projects creation #1033
 * Added a workaround to avoid creating include folders not under the build directory #1049
 * Added a default virtual folder structure for out-of-tree build files #1053
+* Added a way to set variants containing /, for example linux/debug
 
 NEW IN WAF 1.6.8
 ----------------
